# image-metadata-stripper

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LEGAL.md  LICENSE  NOTICE.md  QUALIFICATION_REPORT.md  README.md  SECURITY.md  clean-test.jpg.prove-clean.json  clean-test.jpg.prove-clean.txt  docker-compose.yml  package.json  pnpm-lock.yaml  security.txt  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml  release.yml
apps/worker/: Dockerfile  LICENSE  pyproject.toml  requirements.txt
apps/worker/app/: __init__.py  main.py
apps/worker/tests/: test_batch.py  test_comprehensive.py  test_scrub.py  test_upload_security.py  test_verification_pass2.py
