[project]
name = "exifscrub-worker"
version = "1.0.0"
description = "ExifScrub worker — ExifTool-backed metadata scrubbing for PDF and media"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.28.0"]
